<resources>
    <string name="app_name">TopMusicAlbunsChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="there_was_a_problem_fetching_the_list">There was a problem fetching the list</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="retry">Retry</string>
    <string name="top">Top</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <string name="released_on">Released on</string>
</resources>